// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<li
  className="src-shared-components-SubMenu-Item-___style__item___2U0li src-shared-components-SubMenu-Item-___style__current___3WfNb"
  role="button"
  tabIndex={0}
>
  <Link
    enforceA={false}
    openNewTab={false}
    to="menu url"
  >
    <div
      aria-label="title"
    />
    title
  </Link>
</li>
`;

exports[`Matches shallow shapshot 2`] = `
<li
  className="src-shared-components-SubMenu-Item-___style__item___2U0li"
  role="button"
  tabIndex={0}
>
  <Link
    enforceA={false}
    openNewTab={false}
    to="menu url"
  >
    <div
      aria-label="title"
    />
    title
  </Link>
</li>
`;
